# Puzzle-Host

./: .gitignore  README.md
.github/: copilot-instructions.md
src/Auth/: .gitignore  README.md  pyproject.toml
src/Auth/alembic/: env.py
src/Auth/alembic/versions/: 2777db99937d_create_initial_tables.py  fdd7b6fe8819_add_user_token_version.py
src/Auth/app/: db.py  main.py  models.py
src/Auth/app/api/: auth.py
src/Auth/app/core/: utils.py
src/Auth/app/routers/: __init__.py  account.py  auth.py
src/Frontend/: README.md  components.json  package.json  pnpm-lock.yaml
src/Frontend/src/: App.vue
src/Frontend/src/assets/: main.css
src/Puzzles/: .gitignore  README.md  main.py  pyproject.toml
