[project]
name = "puzzlehost-auth"
version = "0.1.0"
description = "Authentication module for Puzzle Host"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "cryptography>=46.0.6",
    "fastapi>=0.135.2",
    "passlib[bcrypt]>=1.7.4",
    "pyjwt[crypto]>=2.12.1",
    "python-multipart>=0.0.22",
    "sqlmodel>=0.0.37",
    "uvicorn>=0.42.0",
]
